--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navBar {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: rgb(175, 175, 175);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 35px;
+  padding-left: 25px;
+  background-color:black !important;
+}
+
+.navBarItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 15px;
+  text-decoration: none;
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+.cart-num {
+  background-color: grey;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.all-products {
+  display: flex;
+  margin: 20px;
+}
+
+.card {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(211, 211, 211);
+  border-radius: 10px;
+  max-width: 200px;
+}
+
+.card-img-top {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.card-body {
+  margin: 10px;
+}
+
+.btn {
+  background-color: cornflowerblue;
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 3px;
+  border-radius: 3px;
+  border-width: 0px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.cart-container {
+  margin: 20px;
+}
+
+.card-cart {
+  display: flex;
+  flex-direction: row;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(211, 211, 211);
+  border-radius: 10px;
+  max-width: 500px;
+}
+
+.card-img-left {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.portfolioImg{
+  width: 500px ;
+  height: 400px;
+  margin: 0 auto !important;
+  padding-top: 30px;
+  padding-left: 30px;
+  
+}
+.gridDiv{
+  padding-left: 20px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+
+}
+.desc{
+  padding: 40px;
+  margin-top: 30px;
+}
+p{
+  padding: 30px;
+}
+.header-text{
+  margin-left: 30%;
+  padding: 10px;
 }
