--- a/src/App.css
+++ b/src/App.css
@@ -35,16 +35,20 @@
 }
 
 .all-products {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4,25%);
   margin: 20px;
 }
 
 .card {
   border-style: solid;
   border-width: 2px;
-  border-color: rgb(211, 211, 211);
+  border-color: black;
   border-radius: 10px;
-  max-width: 200px;
+  max-width: 300px;
+  max-height: 600px;
+  margin-bottom: 10px;
+
 }
 
 .card-img-top {
@@ -158,7 +162,7 @@ form{
   color: black;
   margin-left: 26%;
   padding: 10px;
-  margin-top: 2%;
+
 }
 
 #porukaNeuspešno{
@@ -168,5 +172,5 @@ form{
   color: black;
   margin-left: 26%;
   padding: 10px;
-  margin-top: 2%;
+
 }
