--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,36 @@ height: 40px;
   color: white;
   border-radius: 5px;
   text-align: center;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-left: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 7px;
+  padding-right: 7px;
+  margin-left: 20px;
+  text-decoration: none;
+  color:black;
+  float: right !important;
+  overflow: hidden;
+
+}
+.link
+{
+  text-decoration: none;
+  color: white;
+}
+.link:hover
+{
+  text-decoration: none;
+  color: white;
+}
+#sifrap {
+    width: 350px !important;
+  border-top: 1px solid black;
+  margin: 2px;
+  margin-bottom: 100px !important;
+  padding: 5px;
+  border-bottom: 1px dashed gray;
+
+  
 }
 
 .all-products {
@@ -154,7 +179,37 @@ a {
   padding-left: 20px;
   display: grid;
   grid-template-columns: 50% 50%;
+  margin:20px;
 
+}
+.product-img {
+  padding: 20px;
+
+}
+.dp{
+  margin: 2px;
+  margin-bottom: 10px;
+  padding: 5px;
+  border-bottom: 1px dashed gray;
+  width: 350px;
+
+}
+.dpl{
+  margin: 2px;
+  margin-bottom: 10px;
+  margin-left: 4px;
+  padding: 5px;
+  width: 350px;
+
+}
+.product-img img:hover{
+  box-shadow: 0 8px 10px 0 rgba(0,0,0,0.2);
+
+
+}
+.product-info{
+  margin-top: 20px;
+  margin-left: 20%;
 }
 .desc{
   padding: 7%;
@@ -219,4 +274,21 @@ form{
   margin-left: 26%;
   padding: 10px;
 
+}
+.btnUpit{
+ 
+  margin-left: 7px;
+  background-color: red;
+  color:white;
+  border: 2px solid red;
+  width: 150px;
+  margin: 10px;
+
+}
+.btnUpit:hover{
+  box-shadow: 0 8px 10px 0 rgba(0,0,0,0.2);
+}
+input{
+  border: 1px solid gray;
+  border-radius: 3px;
 }
