--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,7 @@ a {
 }
 
 .main{
-  margin-bottom: 37%
+
 }
 p{
   padding: 30px;
@@ -208,11 +208,16 @@ p{
   margin-left: 30%;
   padding: 10px;
 }
+.ukupno{
+  margin-left: 50px;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
 .footer-div{
   background-color: silver;
   background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTd37ZhaXi_ZF2_CHNilrGUWVWTZBS5mRS3UQ&usqp=CAU") ;
-  position:relative;
-   bottom:0;
+  
+ 
    width:100%;
 }
 .info{
@@ -254,6 +259,15 @@ form{
   padding: 10px;
 
 }
+#uspešno{
+  width: 600px;
+  height: 40px;
+  background-color: #90EE90;
+  color: black;
+  margin-left: 26%;
+  margin-bottom: 30px;
+  padding: 10px;
+}
 
 #porukaNeuspešno{
   width: 600px;
@@ -280,4 +294,13 @@ form{
 input{
   border: 1px solid gray;
   border-radius: 3px;
+}
+.potvrdiPorudzbinu{
+  background-color: #90EE90;
+  border: 2px solid  #90EE90;
+  width: 200px;
+  height: 40px;
+  margin-bottom: 20px;
+  margin-left: 48px;
+  
 }
