--- a/src/App.css
+++ b/src/App.css
@@ -151,9 +151,19 @@ a {
 .portfolioImg{
   width: 500px ;
   height: 400px;
+  padding-top: 30px;
+  padding-left: 40px;
+  margin-bottom: 15px;
+
+  
+}
+.drvolex{
+  width: 530px ;
+  height: 300px;
   margin: 0 auto !important;
   padding-top: 30px;
   padding-left: 30px;
+
   
 }
 .gridDiv{
@@ -249,11 +259,11 @@ form{
 .form-div{
   margin-top:5%;
   margin-bottom:5%;
-  margin-left:30%;
+  margin-left:10% !important;
   background-color: silver;
   padding-top: 3%;
   padding-bottom: 3%;
-  width: 500px;
+  width: 470px;
   border-radius: 10px;
   background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTd37ZhaXi_ZF2_CHNilrGUWVWTZBS5mRS3UQ&usqp=CAU") ;
 }
@@ -301,9 +311,13 @@ form{
 .btnUpit:hover{
   box-shadow: 0 8px 10px 0 rgba(0,0,0,0.2);
 }
-input{
+input, select{
   border: 1px solid gray;
   border-radius: 3px;
+  width: 300px;
+  height: 30px;
+  margin: 0px;
+  
 }
 .potvrdiPorudzbinu{
   background-color: #90EE90;
@@ -314,3 +328,62 @@ input{
   margin-left: 48px;
   
 }
+#kontaktInfo{
+  margin-left:60px;
+}
+.gridPrikazKontakt{
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+.gridPrikazKontakt div{
+  margin:40px;
+}
+#myform{
+  margin-left: 10px;
+}
+.dm{
+  text-decoration: none;
+  color: black;
+  font-weight: 100;
+}
+.dm :hover{
+  text-decoration: none;
+  color: black !important;
+}
+.lbl{
+  font-weight: 600;
+  margin-bottom: 2px;
+}
+
+.tab{
+  display: block;
+  margin-top: 20px;
+  margin-left:30%;
+}
+.tab a{
+  margin-left:40px;
+  width: 110px;
+  height: 60px;
+  padding: 5px;
+}
+.tab a:hover{
+  opacity: 70%;
+}
+.divider{
+  border-top: 1px solid rgb(150, 147, 147);
+  opacity: 60px;
+  height: 0px !important;
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#slika-logo:hover{
+  box-shadow: 0 15px 15px 0 rgba(0,0,0,0.2);
+
+}
+.slicniProizvodi{
+  margin-left:30px;
+}
+
+
