--- a/src/App.css
+++ b/src/App.css
@@ -273,7 +273,7 @@ form{
 #porukaUspešno{
   width: 600px;
   height: 40px;
-  background-color: #90EE90;
+  background-color:#7D4F20;
   color: black;
   margin-left: 26%;
   padding: 10px;
@@ -320,8 +320,9 @@ input, select{
   
 }
 .potvrdiPorudzbinu{
-  background-color: #90EE90;
-  border: 2px solid  #90EE90;
+  background-color: #7D4F20;
+  border: 2px solid  #7D4F20;
+  color: white;
   width: 200px;
   height: 40px;
   margin-bottom: 20px;
